# GS

./: .gitignore
Task2/: Task2.uvgui.Christian  Task2.uvopt  Task2.uvproj  error.h  hardware_io.c  hardware_io.h  main.c  output.c  output.h  rotary_encoder.c  rotary_encoder.h  timer.c  timer.h
Task2/Listings/: Task2.map
Task2/Objects/: Task2.axf  Task2.build_log.htm  Task2.htm  Task2.lnp  Task2_Simulation.dep  assert.crf  getline.crf  keypad.crf  main.crf  main.d  retarget.crf  serial.crf  sim_board_io.crf  system_stm32f10x.crf  tft.crf  ti_lib.crf  timer.crf  timer.d
Task3/: CMakeLists.txt  Task3.sln  Task3.uvproj  Task3.vcxproj  analyze.c  analyze.h  bitmap_types.h  error.h  input.c  input.h  list.c  list.h  main.c  ms_types.h  output.c  output.h  packed.h  vlarray.c  vlarray.h
Task3/Debug/Task3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Task3/Task3/: Task3.vcxproj
Task3/x64/Debug/Task3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task3.lastbuildstate
Task4/: Task4.uvproj  bus.c  bus.h  config.h  error.h  haModule.c  hardware_IO.c  hardware_IO.h  list.c  list.h  main.c  output.c  output.h  sensor.c  sensor.h  timer.c
Task5/: Task5.uvproj  error.h  hardware_io.c  hardware_io.h  main.c  output.c  output.h  rotary_encoder.c  rotary_encoder.h
